2006-05-25  Brian Bidulock  <bidulock@openss7.org>

	* .indent.pro: removed storage classes (inline)

2006-05-24  Brian Bidulock  <bidulock@openss7.org>

	* scripts/hot.lds: try write path priority over read path
	* m4/kernel.m4: add -fno-inline-functions at -O2

2006-05-21  Brian Bidulock  <bidulock@openss7.org>

	* am/genksyms.am: load script missing -T option for 2.6

2006-05-08  Brian Bidulock  <bidulock@openss7.org>

	* scripts/strconf-sh: added module id base to strconf
	* m4/strconf.m4: added module id base to strconf
	* am/strconf.am: added module id base to strconf
	* acinclude.m4: added module id base to strconf
	* openss7.spec.in: updated headers

2006-04-25  Brian Bidulock  <bidulock@openss7.org>

	* openss7.refs: more references

2006-04-22  Brian Bidulock  <bidulock@openss7.org>

	* openss7.refs: added a few more references

2006-04-08  Brian Bidulock  <bidulock@openss7.org>

	* openss7.refs: corrected spelling error reported by spammer

2006-04-07  Brian Bidulock  <bidulock@openss7.org>

	* openss7.refs: added some RFC references

2006-04-05  Brian Bidulock  <bidulock@openss7.org>

	* */man*/*.man, */man/man*/*.man, */doc/man/man*/*.man:
	  Moved all .so xxx.macros lines down beneath .R2 with a script.  SuSE
	  10's broken man(1) program thinks that .so lines after a comment line
	  is a redirect, but it is not.  No other man(1) is that stupid.  OTOH
	  SuSE 10's man(1) uses zsoelim, so it doesn't matter if our .macros
	  file gets compressed (just our .refs file).  Also updated all
	  copyright headers.

2006-04-03  Brian Bidulock  <bidulock@openss7.org>

	* m4/dist.m4: better detection of SuSE 10 distribution
	  - SuSE 10 uses all caps in SuSE-release for some stupid reason.
	  - Check for OSS as a SuSE codename (SuSE never had codenames).
	  - Expect Mandrake to use Mandriva in random places.
	* m4/rpm.m4 (PACKAGE_RPMDIST): add codename
	* scripts/send-pr: do not remove leading space from included lines
